@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2001, 2014 IBM Corp. and others
+ * Copyright (c) 2001, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -15,7 +15,7 @@
  * OpenJDK Assembly Exception [2].
  *
  * [1] https://www.gnu.org/software/classpath/license.html
- * [2] http://openjdk.java.net/legal/assembly-exception.html
+ * [2] https://openjdk.org/legal/assembly-exception.html
  *
  * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
  *******************************************************************************/
@@ -97,7 +97,7 @@ public class RuntimeSettingsCommand extends Command
 				initialSoftmx = cmdline.substring(start + length, end);
 				initialSoftmx = initialSoftmx.toUpperCase();
 			}
-			currentSoftmx = new Long(GCExtensions.softMx().longValue());
+			currentSoftmx = Long.valueOf(GCExtensions.softMx().longValue());
 			qualifiedCurrentSoftmx = currentSoftmx.toString();
 			Matcher m = p.matcher(initialSoftmx);
 
@@ -229,7 +229,7 @@ public class RuntimeSettingsCommand extends Command
 	 * a qualified size such as '4K' 
 	 */
 	private String sizeInBytes(String qSize) {
-		Long number = new Long(qSize.substring(0, qSize.length()-1));
+		Long number = Long.valueOf(qSize.substring(0, qSize.length()-1));
 		if (qSize.endsWith("K")) {
 			number = number * 1024;
 		} else if (qSize.endsWith("M")) {
