@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2017 IBM Corp. and others
+ * Copyright (c) 2008, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -15,7 +15,7 @@
  * OpenJDK Assembly Exception [2].
  *
  * [1] https://www.gnu.org/software/classpath/license.html
- * [2] http://openjdk.java.net/legal/assembly-exception.html
+ * [2] https://openjdk.org/legal/assembly-exception.html
  *
  * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
  *******************************************************************************/
@@ -613,7 +613,7 @@ abstract class Config {
         		addedFileName = _unicityOfFileName.get(fileNameCanonical);
         		if (addedFileName == null) {
         			fileNames().add(fileNameCanonical);
-        			_unicityOfFileName.put(fileNameCanonical, new Integer(0));
+        			_unicityOfFileName.put(fileNameCanonical, Integer.valueOf(0));
         		}
         	} else {
         		if (badFileEncountered())
