@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2018, 2018 IBM Corp. and others
+ * Copyright (c) 2018, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -15,7 +15,7 @@
  * OpenJDK Assembly Exception [2].
  *
  * [1] https://www.gnu.org/software/classpath/license.html
- * [2] http://openjdk.java.net/legal/assembly-exception.html
+ * [2] https://openjdk.org/legal/assembly-exception.html
  *
  * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
  *******************************************************************************/
@@ -38,7 +38,7 @@ public class BigDecimalToStringTest{
       @Test
       public void testBigDecimal0ToString() {
          NumberFormat format = new DecimalFormat("###,###,##0");
-         BigDecimal bigDecimalValue = new BigDecimal(new Double(0.000));
+         BigDecimal bigDecimalValue = new BigDecimal(Double.valueOf(0.000));
          String s = bigDecimalToString(format, bigDecimalValue);
          logger.debug("Converting BigDecimal with value 0 to string ...");
          Assert.assertEquals(s, "0");
