@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2019 IBM Corp. and others
+ * Copyright (c) 2005, 2022 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -15,7 +15,7 @@
  * OpenJDK Assembly Exception [2].
  *
  * [1] https://www.gnu.org/software/classpath/license.html
- * [2] http://openjdk.java.net/legal/assembly-exception.html
+ * [2] https://openjdk.org/legal/assembly-exception.html
  *
  * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
  *******************************************************************************/
@@ -189,20 +189,22 @@ public class TestOperatingSystemMXBean {
 			AssertJUnit.assertTrue(mbs.getAttribute(objName, "SystemLoadAverage") instanceof Double);
 
 			// The good IBM attributes ...
-			AssertJUnit.assertTrue(mbs.getAttribute(objName, "TotalPhysicalMemory") instanceof Long);
 			AssertJUnit.assertTrue(mbs.getAttribute(objName, "ProcessingCapacity") instanceof Integer);
 			AssertJUnit.assertTrue(mbs.getAttribute(objName, "ProcessCpuTime") instanceof Long);
 			AssertJUnit.assertTrue(mbs.getAttribute(objName, "FreePhysicalMemorySize") instanceof Long);
-			AssertJUnit.assertTrue(mbs.getAttribute(objName, "ProcessVirtualMemorySize") instanceof Long);
 			AssertJUnit.assertTrue(mbs.getAttribute(objName, "ProcessPrivateMemorySize") instanceof Long);
 			AssertJUnit.assertTrue(mbs.getAttribute(objName, "ProcessPhysicalMemorySize") instanceof Long);
 			AssertJUnit.assertTrue(mbs.getAttribute(objName, "TotalPhysicalMemorySize") instanceof Long);
-			AssertJUnit.assertTrue(mbs.getAttribute(objName, "ProcessCpuTimeByNS") instanceof Long);
 			AssertJUnit.assertTrue(mbs.getAttribute(objName, "SystemCpuLoad") instanceof Double);
 			AssertJUnit.assertTrue(mbs.getAttribute(objName, "CommittedVirtualMemorySize") instanceof Long);
 			AssertJUnit.assertTrue(mbs.getAttribute(objName, "TotalSwapSpaceSize") instanceof Long);
 			AssertJUnit.assertTrue(mbs.getAttribute(objName, "FreeSwapSpaceSize") instanceof Long);
 			AssertJUnit.assertTrue(mbs.getAttribute(objName, "ProcessCpuLoad") instanceof Double);
+			if (verMajor < 19) {
+				AssertJUnit.assertTrue(mbs.getAttribute(objName, "TotalPhysicalMemory") instanceof Long);
+				AssertJUnit.assertTrue(mbs.getAttribute(objName, "ProcessCpuTimeByNS") instanceof Long);
+				AssertJUnit.assertTrue(mbs.getAttribute(objName, "ProcessVirtualMemorySize") instanceof Long);
+			}
 			if (verMajor >= 14) {
 				AssertJUnit.assertTrue(mbs.getAttribute(objName, "CpuLoad") instanceof Double);
 				AssertJUnit.assertTrue(mbs.getAttribute(objName, "FreeMemorySize") instanceof Long);
@@ -271,7 +273,7 @@ public class TestOperatingSystemMXBean {
 			// expected
 		}
 
-		attr = new Attribute("AvailableProcessors", new Integer(2));
+		attr = new Attribute("AvailableProcessors", Integer.valueOf(2));
 		try {
 			mbs.setAttribute(objName, attr);
 			Assert.fail("Should have thrown an exception.");
@@ -280,21 +282,13 @@ public class TestOperatingSystemMXBean {
 		}
 
 		// Try and set the Name attribute with an incorrect type.
-		attr = new Attribute("Name", new Long(42));
+		attr = new Attribute("Name", Long.valueOf(42));
 		try {
 			mbs.setAttribute(objName, attr);
 			Assert.fail("Should have thrown an exception");
 		} catch (Exception e1) {
 			// expected
 		}
-	}
-
-	/**
-	 * IBM attribute
-	 */
-	@Test
-	public void testGetTotalPhysicalMemory() {
-		AssertJUnit.assertTrue(osb.getTotalPhysicalMemory() > 0);
 	}
 
 	/**
@@ -529,7 +523,7 @@ public class TestOperatingSystemMXBean {
 	public final void testInvoke() {
 		// OperatingSystemMXBean has no operations to invoke...
 		try {
-			Object retVal = mbs.invoke(objName, "DoTheRightThing", new Object[] { new Long(7446), new Long(54) },
+			Object retVal = mbs.invoke(objName, "DoTheRightThing", new Object[] { Long.valueOf(7446), Long.valueOf(54) },
 					new String[] { "java.lang.Long", "java.lang.Long" });
 			Assert.fail("Should have thrown an exception.");
 		} catch (Exception e) {
@@ -579,6 +573,10 @@ public class TestOperatingSystemMXBean {
 				attrNbr = 27;
 			} else {
 				attrNbr = 25;
+			}
+			if (verMajor >= 19) {
+				// deprecated APIs are removed in 19
+				attrNbr -= 3;
 			}
 		} else {
 			// Java 8 - 13
