@@ -1,7 +1,7 @@
 package org.openj9.test.java.lang.ref;
 
 /*******************************************************************************
- * Copyright (c) 1998, 2018 IBM Corp. and others
+ * Copyright (c) 1998, 2022 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -17,7 +17,7 @@ package org.openj9.test.java.lang.ref;
  * OpenJDK Assembly Exception [2].
  *
  * [1] https://www.gnu.org/software/classpath/license.html
- * [2] http://openjdk.java.net/legal/assembly-exception.html
+ * [2] https://openjdk.org/legal/assembly-exception.html
  *
  * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
  *******************************************************************************/
@@ -34,7 +34,6 @@ import java.lang.ref.SoftReference;
 public class Test_ReferenceQueue {
 	static Boolean b;
 	static Integer integer;
-	final boolean isJava8 = System.getProperty("java.specification.version").equals("1.8");
 	final boolean disableClearBeforeEnqueue =
             Boolean.getBoolean("jdk.lang.ref.disableClearBeforeEnqueue");
 
@@ -55,7 +54,7 @@ public class Test_ReferenceQueue {
 			synchronized (rq) {
 				// store in a static so it won't be gc'ed because the jit
 				// optimized it out
-				integer = new Integer(667);
+				integer = Integer.valueOf(667);
 				SoftReference sr = new SoftReference(integer, rq);
 				sr.enqueue();
 				rq.notify();
@@ -74,12 +73,12 @@ public class Test_ReferenceQueue {
 	public void test_poll() {
 		// store in a static so it won't be gc'ed because the jit
 		// optimized it out
-		b = new Boolean(true);
+		b = Boolean.valueOf(true);
 		//SM
 		SoftReference sr = new SoftReference(b, rq);
 		sr.enqueue();
 		try {
-			if (isJava8 || disableClearBeforeEnqueue) {
+			if (disableClearBeforeEnqueue) {
 				AssertJUnit.assertTrue("Poll failed.", ((Boolean)rq.poll().get()).booleanValue());
 			} else {
 				AssertJUnit.assertTrue("Poll failed.", (rq.poll().get() == null));
@@ -96,12 +95,12 @@ public class Test_ReferenceQueue {
 	public void test_remove() {
 		// store in a static so it won't be gc'ed because the jit
 		// optimized it out
-		b = new Boolean(true);
+		b = Boolean.valueOf(true);
 		//SM
 		SoftReference sr = new SoftReference(b, rq);
 		sr.enqueue();
 		try {
-			if (isJava8 || disableClearBeforeEnqueue) {
+			if (disableClearBeforeEnqueue) {
 				AssertJUnit.assertTrue("Remove failed.", ((Boolean)rq.remove().get()).booleanValue());
 			} else {
 				AssertJUnit.assertTrue("Remove failed.", (rq.remove().get() == null));
