@@ -1,7 +1,7 @@
 package org.openj9.test.java.lang;
 
 /*******************************************************************************
- * Copyright (c) 1998, 2018 IBM Corp. and others
+ * Copyright (c) 1998, 2022 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -17,7 +17,7 @@ package org.openj9.test.java.lang;
  * OpenJDK Assembly Exception [2].
  *
  * [1] https://www.gnu.org/software/classpath/license.html
- * [2] http://openjdk.java.net/legal/assembly-exception.html
+ * [2] https://openjdk.org/legal/assembly-exception.html
  *
  * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
  *******************************************************************************/
@@ -97,7 +97,7 @@ public class Test_System {
 		Integer b[] = new Integer[20];
 		int i = 0;
 		while (i < a.length) {
-			a[i] = new Integer(i);
+			a[i] = Integer.valueOf(i);
 			++i;
 		}
 		System.arraycopy(a, 0, b, 0, a.length);
@@ -271,19 +271,6 @@ public class Test_System {
 			System.runFinalization();
 		}
 		AssertJUnit.assertTrue("Failed to run finalization", ranFinalize);
-	}
-
-	/**
-	 * @tests java.lang.System#runFinalizersOnExit(boolean)
-	 */
-	@Test
-	public void test_runFinalizersOnExit() {
-		try {
-			System.runFinalizersOnExit(true);
-		} catch (Throwable t) {
-			AssertJUnit.assertTrue("Failed to set runFinalizersOnExit", false);
-		}
-		AssertJUnit.assertTrue("Passed runFinalizersOnExit", true);
 	}
 
 	/**
