@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2001, 2018 IBM Corp. and others
+ * Copyright (c) 2001, 2022 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -15,7 +15,7 @@
  * OpenJDK Assembly Exception [2].
  *
  * [1] https://www.gnu.org/software/classpath/license.html
- * [2] http://openjdk.java.net/legal/assembly-exception.html
+ * [2] https://openjdk.org/legal/assembly-exception.html
  *
  * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
  *******************************************************************************/
@@ -33,13 +33,17 @@ public class ComplexIndyTest{
 	}
 	@Test(groups = { "level.extended" })
 	public void test_gwtTest_Integer() {
-		String s = com.ibm.j9.jsr292.indyn.ComplexIndy.gwtTest(new Integer(1));
+		String s = com.ibm.j9.jsr292.indyn.ComplexIndy.gwtTest(Integer.valueOf(1));
 		if (!s.equals("2")) Assert.fail("Wrong string returned'" + s +"'");
 	}
 	@Test(groups = { "level.extended" })
 	public void test_gwtTest_Object() {
 		String s = com.ibm.j9.jsr292.indyn.ComplexIndy.gwtTest(new Object());
-		if (!s.equals("DoesNotUnderStand: class java.lang.Object message: double")) Assert.fail("Wrong string returned'" + s +"'");
+		if (!s.equals("DoesNotUnderstand: class java.lang.Object message: double")
+		&&  !s.equals("DoesNotUnderstand: class java.lang.Identity message: double")
+		) {
+			Assert.fail("Wrong string returned'" + s +"'");
+		}
 	}
 
 	@Test(groups = { "level.extended" })
